refactor: Handler -> Consumer 이름 변경 및 EventService 생성